# pytest_django_course

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
api/techlayoffs/: manage.py
api/techlayoffs/companies/: models.py  serializers.py  views.py
api/techlayoffs/companies/migrations/: 0001_initial.py
api/techlayoffs/companies/tests/: test_api.py  test_email_service.py  test_fibonacci.py  test_generic_api.py
api/techlayoffs/fibonacci/: cached.py  conftest.py  fibonachi_naive.py  naive.py
api/techlayoffs/fibonacci/tests/: test_fb.py  test_performance.py
api/techlayoffs/techlayoffs/: asgi.py  settings.py  urls.py  wsgi.py
