[project]
name = "pytest-django-course"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "coverage>=7.10.7",
    "djangorestframework>=3.16.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-django==4.11.1",
]
